This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
4/22/22: Added property FalconEventScaling for scaling images from EER files
aligned in SerialEM the same as other counting images and revised help to
describe measuring this (In 4.0).

4/22/22: Fixed Falcon 4 aligning in SerialEM for real this time (In 4.0).

4/22/22: Fixed crash printing an error message from sending mail (In 4.0).

4/22/22: Fixed reading of metadata from HDF montages and reordering of piece
coordinates on bidirection/dose-symmetric series (In 4.0).

4/19/22: Improved values reported from CheckForBadStripe so it is possible to
distinguish a bad stripe from a defect near chip boundary (In 4.0).

4/17/22: Prevented "Run script after" in Navigator Acquire from being moved
before primary action (In 4.0).

4/17/22: Fixed Echo to not convert "\n" to newlines (In 4.0).

4/17/22: Made "Save Records" in multishot dialog be disabled by early return
setting only if a K2/K3 is current camera, and disabled the early return
entries when one is not the current camera (In 4.0).


4/17/22: Made sure filter settings are asserted at start of mag-dependent
image shift calibration (In 4.0).

4/17/22: Prevented infinite looping after error saving in background during
dose-symmetric series and fixed problems with reordering file after error
(In 4.0).

4/17/22: Prevented waiting for JEOL lens relaxation in STEM mode (In 4.0).

4/17/22: Limited number of visible items in a combo box dropdown to 40, which
makes a scroll bar appear and avoids noxious behavior when selecting scripts
(In 4.0).

4/4/22: Added property MultiInHoleStartAngle to set angle of first peripheral
shot take in a hole with multishot routine.

4/4/22: Added option to take montages through the multishot routine.
