@@ -645,6 +645,10 @@ MAC_SAME_FUNC(RunScriptInFile, 1, 0, GetFileInWatchedDir, RUNSCRIPTINFILE)
 MAC_SAME_FUNC(RunSerialEMSnapshot, 0, 0, GetFileInWatchedDir, RUNSERIALEMSNAPSHOT)
 MAC_SAME_NAME_ARG(ImageConditions, 1, 4, IMAGECONDITIONS, S)
 MAC_SAME_NAME_ARG(AccumulateRecordDose, 1, 4, ACCUMULATERECORDDOSE, D)
+MAC_SAME_NAME_ARG(OpenMultiShotFiles, 1, 4, OPENMULTISHOTFILES, S)
+MAC_SAME_NAME_NOARG(CloseMultiShotFiles, 0, 4, CLOSEMULTISHOTFILES)
+MAC_SAME_NAME_ARG(SetNextEmailAddress, 1, 6, SETNEXTEMAILADDRESS, IS)
+MAC_SAME_NAME_NOARG(ReorderMontageByTilt, 0, 4, REORDERMONTAGEBYTILT)
 
 // new Python-only commands need to be added to pythonOnlyCmds in ::CMacroProcessor
 // New Not from Python items omit _ARG or _NOARG
